# Gen3RngAutomationTools

./: .gitignore  CMakeLists.txt  README.md  main.c  settings_example.ini
data/FRENCSLOTS/: good  land  old  super
data/LGENCSLOTS/: good  land  super
data/raw/: frgoodrod.csv  froldrod.csv  frsuperrod.csv  lggoodrod.csv  lgsuperrod.csv
data/scripts/: encounters.py  pokemon-stats-gen1-abilites.json  results.txt  scrape.py  stats.py
include/: commands.h  constants.h  encounter_table.h  enums.h  filters.h  locations.h  pokemon.h  rng.h
src/: commands.c  filters.c  locations.c  pokemon.c  seeds.c
test/: CMakeLists.txt  main.c
